Fix code size on ios mobile

--- a/css/code.scss
+++ b/css/code.scss
@@ -15,6 +15,7 @@ figure.highlight {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 0.9em;
+    -webkit-text-size-adjust: none;
 
     pre {
         margin-top: 0;
